# atdd

./: .gitignore  .launch_prompt.txt  AGENTS.md  ATDD_FORK_BRIEF.md  ATDD_IMPLEMENTATION_PLAN.md  CLAUDE.md  CTO_BRIEF_ATDD.md  README.md  pyproject.toml
.atdd/: config.yaml  manifest.yaml
.atdd/baselines/: coder.yaml
.atdd/hooks/: pre-commit  pre-merge-commit  pre-push
.git-hooks/: pre-commit
.github/workflows/: atdd-validate.yml  post-merge-lifecycle.yml  publish.yml
baselines/: v1.53.0.txt
contracts/commons/compliance/: gate.schema.json  inventory.schema.json
contracts/commons/error/: response.schema.json
docs/: QUICKSTART.md
e2e/0001-self-compliance-validate/: test_0001_issue_lifecycle_smoke.py  test_0001_validate_lifecycle.py  test_0001_validate_lifecycle_smoke.py
plan/: _trains.yaml  _wagons.yaml
plan/_trains/: 0001-self-compliance-validate.yaml
plan/define_plans/: _define_plans.yaml
plan/enforce_structured_logging/: C001.yaml  D001.yaml  E001.yaml  E002.yaml  _enforce_structured_logging.yaml
plan/govern_lifecycle/: _govern_lifecycle.yaml
plan/implement_code/: C001.yaml  D001.yaml  D002.yaml  D003.yaml  D004.yaml  D005.yaml  E001.yaml  _implement_code.yaml
plan/security_patterns/: D001.yaml  D002.yaml  D003.yaml  D004.yaml  D005.yaml  E001.yaml  _security_patterns.yaml
plan/self_compliance_migration/: C001.yaml  D001.yaml  D002.yaml  E001.yaml  E002.yaml  K001.yaml  P001.yaml  R001.yaml  _self_compliance_migration.yaml  capability-inventory.yaml
plan/verify_contracts/: C001.yaml  C002.yaml  D001.yaml  E001.yaml  K001.yaml  _verify_contracts.yaml
scripts/: capture-baseline.sh  install-hooks.sh  refresh.sh  sync-skills.sh  sync-upstream.sh  verify-after-sync.sh
skills-package/: README.md
src/atdd/: cli.py  conftest.py  version_check.py
(+172 files in other folders)
