[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atdd"
version = "1.53.0+diool.2"
description = "ATDD Platform - Acceptance Test Driven Development toolkit"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = ["pyyaml", "pytest>=7.0", "pytest-xdist", "jsonschema", "pytest-html", "radon>=5.0"]

[project.urls]
Homepage = "https://github.com/afokapu/atdd"
Repository = "https://github.com/afokapu/atdd"
Issues = "https://github.com/afokapu/atdd/issues"
Changelog = "https://github.com/afokapu/atdd/releases"

[project.optional-dependencies]
dev = []
viz = ["streamlit", "st-link-analysis"]

[project.scripts]
atdd = "atdd.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"atdd.coach.templates" = ["*.md"]
"atdd.coach.templates.hooks" = ["pre-commit"]
"atdd.coach.schemas" = ["*.json"]
"atdd.coach.conventions" = ["*.yaml"]
"atdd.coach.overlays" = ["*.md"]
"atdd.planner.conventions" = ["*.yaml"]
"atdd.planner.schemas" = ["*.json"]
"atdd.tester.conventions" = ["*.yaml"]
"atdd.tester.schemas" = ["*.json"]
"atdd.coder.conventions" = ["*.yaml"]
"atdd.coder.schemas" = ["*.json"]
"atdd" = ["coder/validators/fixtures/**"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/atdd"]
markers = [
    "tester: marks tests as tester validators",
    "platform: marks tests as platform validators",
    "github_api: marks tests that require live GitHub API access",
    "security: marks tests as security validators",
    "locale: marks tests as localization validators (Localization Manifest Spec v1)",
    "coder: marks tests as coder phase validators",
]
